# linecount

./: Cargo.toml  README.md
src/: lc.rs  lib.rs
